--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Create structured objects for some work and run them.",
   "scripts": {
+    "clean": "rm src/**/*.js",
     "test": "vitest"
   },
   "author": "Z Goddard <mzgoddard@gmail.com>",
